fix link alignment on <350px viewports

--- a/index.css
+++ b/index.css
@@ -111,7 +111,9 @@ nav {
 
 .project-links {
   display: inline-block;
-  max-width: 90vw;
+  max-width: 90%;
+  margin: auto;
+  text-align: center;
 }
 
 .pl {
@@ -123,10 +125,10 @@ nav {
   border-radius: 0.25rem;
   padding: 0.25rem;
   box-shadow: 3px 3px 5px;
-  margin: 0.25rem 0.5rem;
+  margin: 0.25rem auto;
   min-width: fit-content;
-  width: 100%;
-  max-width: 18em;
+  width: 90%;
+  max-width: 10em;
 }
 
 .portrait {
@@ -151,7 +153,7 @@ address {
 
 main {
   flex-grow: 1;
-  margin: 0 auto;
+  margin: 0.5rem auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
